Enhance SecurityConfig to support configurable CORS origins via environment variable and permit access to health check endpoints. This improves flexibility for frontend integration and monitoring.